samples/_failures_safe/1761187721_2f0bc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76b0987a.c: In function ‘main’:
./samples/SAFE/__tmp_76b0987a.c:142:5: error: expected expression at end of input
  142 |     add_log_entry(&analyzer,
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_76b0987a.c:142:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_76b0987a.c:50:5: note: declared here
   50 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_76b0987a.c:142:5: error: expected declaration or statement at end of input
  142 |     add_log_entry(&analyzer,
      |     ^~~~~~~~~~~~~
